ie11 item overflow fix

--- a/packages/spark-core/objects/_stack.scss
+++ b/packages/spark-core/objects/_stack.scss
@@ -108,35 +108,43 @@
     }
 
     > .sprk-o-Stack__item--sixth\@xs {
-      flex-basis: 16.666666667%;
+      flex: 0 0 16.666666667%;
+      max-width: 16.666666667%;
     }
 
     > .sprk-o-Stack__item--fifth\@xs {
-      flex-basis: 20%;
+      flex: 0 0 20%;
+      max-width: 20%;
     }
 
     > .sprk-o-Stack__item--fourth\@xs {
-      flex-basis: 25%;
+      flex: 0 0 25%;
+      max-width: 25%;
     }
 
     > .sprk-o-Stack__item--third\@xs {
-      flex-basis: 33.333333333%;
+      flex: 0 0 33.333333333%;
+      max-width: 33.333333333%;
     }
 
     > .sprk-o-Stack__item--half\@xs {
-      flex-basis: 50%;
+      flex: 0 0 50%;
+      max-width: 50%;
     }
 
     > .sprk-o-Stack__item--three-forths\@xs {
-      flex-basis: 75%;
+      flex: 0 0 75%;
+      max-width: 75%;
     }
 
     > .sprk-o-Stack__item--three-fifths\@xs {
-      flex-basis: 60%;
+      flex: 0 0 60%;
+      max-width: 60%;
     }
 
     > .sprk-o-Stack__item--two-fifths\@xs {
-      flex-basis: 40%;
+      flex: 0 0 40%;
+      max-width: 40%;
     }
 
     // We want the last item to have zero margin on the right
@@ -185,35 +193,43 @@
     }
 
     > .sprk-o-Stack__item--sixth\@s {
-      flex-basis: 16.666666667%;
+      flex: 0 0 16.666666667%;
+      max-width: 16.666666667%;
     }
 
     > .sprk-o-Stack__item--fifth\@s {
-      flex-basis: 20%;
+      flex: 0 0 20%;
+      max-width: 20%;
     }
 
     > .sprk-o-Stack__item--fourth\@s {
-      flex-basis: 25%;
+      flex: 0 0 25%;
+      max-width: 25%;
     }
 
     > .sprk-o-Stack__item--third\@s {
-      flex-basis: 33.333333333%;
+      flex: 0 0 33.333333333%;
+      max-width: 33.333333333%;
     }
 
     > .sprk-o-Stack__item--half\@s {
-      flex-basis: 50%;
+      flex: 0 0 50%;
+      max-width: 50%;
     }
 
     > .sprk-o-Stack__item--three-forths\@s {
-      flex-basis: 75%;
+      flex: 0 0 75%;
+      max-width: 75%;
     }
 
     > .sprk-o-Stack__item--three-fifths\@s {
-      flex-basis: 60%;
+      flex: 0 0 60%;
+      max-width: 60%;
     }
 
     > .sprk-o-Stack__item--two-fifths\@s {
-      flex-basis: 40%;
+      flex: 0 0 40%;
+      max-width: 40%;
     }
 
     // We want the last item to have zero margin on the right
@@ -262,35 +278,43 @@
     }
 
     > .sprk-o-Stack__item--sixth\@m {
-      flex-basis: 16.666666667%;
+      flex: 0 0 16.666666667%;
+      max-width: 16.666666667%;
     }
 
     > .sprk-o-Stack__item--fifth\@m {
-      flex-basis: 20%;
+      flex: 0 0 20%;
+      max-width: 20%;
     }
 
     > .sprk-o-Stack__item--fourth\@m {
-      flex-basis: 25%;
+      flex: 0 0 25%;
+      max-width: 25%;
     }
 
     > .sprk-o-Stack__item--third\@m {
-      flex-basis: 33.333333333%;
+      flex: 0 0 33.333333333%;
+      max-width: 33.333333333%;
     }
 
     > .sprk-o-Stack__item--half\@m {
-      flex-basis: 50%;
+      flex: 0 0 50%;
+      max-width: 50%;
     }
 
     > .sprk-o-Stack__item--three-forths\@m {
-      flex-basis: 75%;
+      flex: 0 0 75%;
+      max-width: 75%;
     }
 
     > .sprk-o-Stack__item--three-fifths\@m {
-      flex-basis: 60%;
+      flex: 0 0 60%;
+      max-width: 60%;
     }
 
     > .sprk-o-Stack__item--two-fifths\@m {
-      flex-basis: 40%;
+      flex: 0 0 40%;
+      max-width: 40%;
     }
 
     // We want the last item to have zero margin on the right
@@ -339,35 +363,43 @@
     }
 
     > .sprk-o-Stack__item--sixth\@l {
-      flex-basis: 16.666666667%;
+      flex: 0 0 16.666666667%;
+      max-width: 16.666666667%;
     }
 
     > .sprk-o-Stack__item--fifth\@l {
-      flex-basis: 20%;
+      flex: 0 0 20%;
+      max-width: 20%;
     }
 
     > .sprk-o-Stack__item--fourth\@l {
-      flex-basis: 25%;
+      flex: 0 0 25%;
+      max-width: 25%;
     }
 
     > .sprk-o-Stack__item--third\@l {
-      flex-basis: 33.333333333%;
+      flex: 0 0 33.333333333%;
+      max-width: 33.333333333%;
     }
 
     > .sprk-o-Stack__item--half\@l {
-      flex-basis: 50%;
+      flex: 0 0 50%;
+      max-width: 50%;
     }
 
     > .sprk-o-Stack__item--three-forths\@l {
-      flex-basis: 75%;
+      flex: 0 0 75%;
+      max-width: 75%;
     }
 
     > .sprk-o-Stack__item--three-fifths\@l {
-      flex-basis: 60%;
+      flex: 0 0 60%;
+      max-width: 60%;
     }
 
     > .sprk-o-Stack__item--two-fifths\@l {
-      flex-basis: 40%;
+      flex: 0 0 40%;
+      max-width: 40%;
     }
 
     // We want the last item to have zero margin on the right
@@ -416,35 +448,43 @@
     }
 
     > .sprk-o-Stack__item--sixth\@xl {
-      flex-basis: 16.666666667%;
+      flex: 0 0 16.666666667%;
+      max-width: 16.666666667%;
     }
 
     > .sprk-o-Stack__item--fifth\@xl {
-      flex-basis: 20%;
+      flex: 0 0 20%;
+      max-width: 20%;
     }
 
     > .sprk-o-Stack__item--fourth\@xl {
-      flex-basis: 25%;
+      flex: 0 0 25%;
+      max-width: 25%;
     }
 
     > .sprk-o-Stack__item--third\@xl {
-      flex-basis: 33.333333333%;
+      flex: 0 0 33.333333333%;
+      max-width: 33.333333333%;
     }
 
     > .sprk-o-Stack__item--half\@xl {
-      flex-basis: 50%;
+      flex: 0 0 50%;
+      max-width: 50%;
     }
 
     > .sprk-o-Stack__item--three-forths\@xl {
-      flex-basis: 75%;
+      flex: 0 0 75%;
+      max-width: 75%;
     }
 
     > .sprk-o-Stack__item--three-fifths\@xl {
-      flex-basis: 60%;
+      flex: 0 0 60%;
+      max-width: 60%;
     }
 
     > .sprk-o-Stack__item--two-fifths\@xl {
-      flex-basis: 40%;
+      flex: 0 0 40%;
+      max-width: 40%;
     }
 
     // We want the last item to have zero margin on the right
